--- a/less/clean-blog.less
+++ b/less/clean-blog.less
@@ -5,7 +5,7 @@
 
 body {
 	.serif;
-	font-size: 20px;
+	font-size: 15px;
 	color: @gray-dark;
 }
 
@@ -27,6 +27,13 @@ h5,
 h6 {
 	.sans-serif;
 	font-weight: 800;
+}
+
+h3,
+h4,
+h5,
+h6 {
+	font-weight: bold;
 }
 
 a {
