--- a/less/clean-blog.less
+++ b/less/clean-blog.less
@@ -19,20 +19,17 @@ p {
 	}
 }
 
-h1,
+h1
+ {
+	.sans-serif;
+	font-weight: 800;
+}
 h2,
 h3,
 h4,
 h5,
 h6 {
 	.sans-serif;
-	font-weight: 800;
-}
-
-h3,
-h4,
-h5,
-h6 {
 	font-weight: bold;
 }
 
@@ -173,10 +170,10 @@ hr.small {
 	.site-heading,
 	.post-heading,
 	.page-heading {
-		padding: 100px 0 50px;
+		padding: 75px 0 50px;
 		color: white;
 		@media only screen and (min-width: 768px) {
-			padding: 150px 0;
+			padding: 80px 0;
 		}
 	}
 	.site-heading,
@@ -184,10 +181,10 @@ hr.small {
 		text-align: center;
 		h1 {
 			margin-top: 0;
-			font-size: 50px;
+			font-size: 30px;
 		}
 		.subheading {
-			font-size: 24px;
+			font-size: 18px;
 			line-height: 1.1;
 			display: block;
 			.sans-serif;
@@ -196,13 +193,13 @@ hr.small {
 		}
 		@media only screen and (min-width: 768px) {
 			h1 {
-				font-size: 80px;
+				font-size: 50px;
 			}
 		}
 	}
 	.post-heading {
 		h1 {
-			font-size: 35px;
+			font-size: 25px;
 		}
 		.subheading,
 		.meta {
@@ -211,9 +208,9 @@ hr.small {
 		}
 		.subheading {
 			.sans-serif;
-			font-size: 24px;
+			font-size: 18px;
 			margin: 10px 0 30px;
-			font-weight: 600;
+			font-weight: 300;
 		}
 		.meta {
 			.serif;
@@ -225,11 +222,11 @@ hr.small {
 			}
 		}
 		@media only screen and (min-width: 768px) {
-			h1 {
-				font-size: 55px;
+			h1,h2 {
+				font-size: 20px;
 			}
 			.subheading {
-				font-size: 30px;
+				font-size: 20px;
 			}
 		}
 	}
@@ -246,19 +243,20 @@ hr.small {
 			color: @brand-primary;
 		}
 		> .post-title {
-			font-size: 30px;
+			font-size: 22px;
 			margin-top: 30px;
 			margin-bottom: 10px;
 		}
 		> .post-subtitle {
 			margin: 0;
 			font-weight: 300;
+			font-size: 18px;
 			margin-bottom: 10px;
 		}
 	}
 	> .post-meta {
 		color: @gray;
-		font-size: 18px;
+		font-size: 14px;
 		font-style: italic;
 		margin-top: 0;
 		> a {
@@ -274,7 +272,7 @@ hr.small {
 	@media only screen and (min-width: 768px) {
 		> a {
 			> .post-title {
-				font-size: 36px;
+				font-size: 25px;
 			}
 		}
 	}
