--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -64,7 +64,7 @@ this.page.url = "{{ page.url }}"; // Replace PAGE_URL with your page's canonical
 
 var d = document, s = d.createElement('script');
 
-s.src = '//daveondevopscom.disqus.com/embed.js';
+s.src = 'http://daveondevopscom.disqus.com/embed.js';
 
 s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
