--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -56,15 +56,14 @@ layout: default
 */
 
 var disqus_config = function () {
-this.page.url = "{{ page.url }}"; // Replace PAGE_URL with your page's canonical URL variable
-//this.page.identifier = "{{ page.title }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+this.page.url = '{{ page.url }}'; // Replace PAGE_URL with your page's canonical URL variable
+//this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 
 (function() { // DON'T EDIT BELOW THIS LINE
-
 var d = document, s = d.createElement('script');
 
-s.src = 'http://daveondevopscom.disqus.com/embed.js';
+s.src = '//daveondevops.disqus.com/embed.js';
 
 s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
