--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,11 +44,14 @@ layout: default
 
             </div>
         </div>
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1" id="disqus_thread" class="container"></div>
+        </div>
+        </div>
     </div>
 </article>
 
 <hr>
-<div id="disqus_thread"></div>
 <script>
 /**
 * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
@@ -56,7 +59,7 @@ layout: default
 */
 
 var disqus_config = function () {
-this.page.url = '{{ page.url }}'; // Replace PAGE_URL with your page's canonical URL variable
+this.page.url = 'http://daveondevops.com/' + '{{ page.url }}'; // Replace PAGE_URL with your page's canonical URL variable
 //this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 
